including loading.js

--- a/index.html
+++ b/index.html
@@ -114,6 +114,7 @@
     </footer>
 
     <script src="Scripts/jquery-1.9.0.min.js"></script>
+    <script src="loading.js"></script>
     <script src="Scripts/bootstrap.min.js"></script>
     <script src="Scripts/classie.js"></script>
     <script src="Scripts/cbpAnimatedHeader.js"></script>
