--- a/index.html
+++ b/index.html
@@ -93,6 +93,7 @@
 
         <section class="row">
             <div class=" fill-screen fixed-attachment" style="background-image: url(images/EmilyPidgeon.jpg)">
+                <iframe width="420" height="315" src="http://www.youtube.com/embed/qr4X8gyUZMA" frameborder="0" allowfullscreen></iframe>
             </div>
         </section>
 
