--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 ﻿<!DOCTYPE html>
 <html>
 <head>
-    <title></title>
+    <title>Freeside Atlanta</title>
+    <link rel="shortcut icon" type="image/x-icon" href="images/favicon.ico"/>
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
     <link href='http://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
     <link href="Content/font-awesome.min.css" rel="stylesheet" />
@@ -60,7 +61,7 @@
 
                 <div class="down-button">
                     <a class="btn" href="#mission">
-                        <i class="fa fa-arrow-circle-down fa-4x wow fadeInDown" data-wow-delay="2s"></i>
+                        <i class="fa fa-arrow-circle-down fa-4x wow fadeInDown" data-wow-delay="1s"></i>
                     </a>
                 </div>
             </div>
