updates the Form 1 bed size

--- a/index.html
+++ b/index.html
@@ -1,8 +1,9 @@
 ﻿<!DOCTYPE html>
 <html>
+
 <head>
     <title>Freeside Atlanta</title>
-    <link rel="shortcut icon" type="image/x-icon" href="images/favicon.ico"/>
+    <link rel="shortcut icon" type="image/x-icon" href="images/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
     <link href='http://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
     <link href="Content/font-awesome.min.css" rel="stylesheet" />
@@ -12,15 +13,14 @@
     <link rel="stylesheet/less" type="text/css" href="background.less" />
 
 </head>
+
 <body>
     <header id="top">
-        <nav class="navbar navbar-inverse navbar-fixed-top cbp-af-header" 
-             role="navigation">
+        <nav class="navbar navbar-inverse navbar-fixed-top cbp-af-header" role="navigation">
             <div class="container-fluid">
                 <!-- Brand and toggle get grouped for better mobile display -->
                 <div class="navbar-header">
-                    <button type="button" class="navbar-toggle collapsed"
-                            data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+                    <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
                         <span class="sr-only">Toggle navigation</span>
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
@@ -42,8 +42,10 @@
                         <li><a href="#getting-to-freeside">Getting To Freeside</a></li>
                         <li><a href="#contact-us">Contact Us</a></li>
                     </ul>
-                </div><!-- /.navbar-collapse -->
-            </div><!-- /.container-fluid -->
+                </div>
+                <!-- /.navbar-collapse -->
+            </div>
+            <!-- /.container-fluid -->
         </nav>
 
     </header>
@@ -51,12 +53,10 @@
     <div class="container-fluid">
 
         <section class="row title-row">
-            <div class="fill-screen stellar-bg"
-                 style="background-image: url(images/spacemdbg-darkened.jpg)"
-                 data-stellar-background-ratio="0.2">
+            <div class="fill-screen stellar-bg" style="background-image: url(images/spacemdbg-darkened.jpg)" data-stellar-background-ratio="0.2">
 
                 <div class="img-responsive title-image " style="color: white">
-                    <img src="images/clearbackgroundwhitelogo.png" alt="Freeside Atlanta Logo"/>
+                    <img src="images/clearbackgroundwhitelogo.png" alt="Freeside Atlanta Logo" />
                 </div>
 
                 <div class="down-button">
@@ -94,9 +94,10 @@
 
         <section id="about" class="row text-banner wow fadeIn">
             <h1>About Freeside</h1>
-            <p>Freeside is a Makerspace for hackers, designers, artists, students, and hobbyists in Atlanta,
-                Georgia.</p>
-            <p>Freeside Technology Spaces, a 501(c)3 non-profit organization, strives to provide a space that inspires collaboration, creativity, teaching, and open projects for the Atlanta community.</p>
+            <p>Freeside is a Makerspace for hackers, designers, artists, students, and hobbyists in Atlanta, Georgia.
+            </p>
+            <p>Freeside Technology Spaces, a 501(c)3 non-profit organization, strives to provide a space that inspires collaboration,
+                creativity, teaching, and open projects for the Atlanta community.</p>
             <p>We host lots of classes and projects to help people network and make their ideas a reality.</p>
 
         </section>
@@ -112,9 +113,9 @@
 
             <div class="activity-element col-md-4">
                 <h2>3D printing</h2>
-                <img src="images/lulzbot.jpg"/>
+                <img src="images/lulzbot.jpg" />
                 <li>Lulzbot mini - Fdm 6x6 bed .2mm layer height</li>
-                <li>Taz - Fdm ?x? bed .4mm layer height</li>
+                <li>Taz - Fdm 4.9 x 4.9 x 6.5 inches bed .4mm layer height</li>
                 <li>From 1+ resin ?x? bed .05mm layer height</li>
                 <li>Autodesk inventor</li>
 
@@ -125,7 +126,7 @@
             </div>
             <div class="activity-element col-md-4">
                 <h2>Electronics Zone</h2>
-                <img src="images/electronics_bench.jpg"/>
+                <img src="images/electronics_bench.jpg" />
                 <li>Soldering stations</li>
                 <li>Oscilloscopes</li>
                 <li>Multimeters</li>
@@ -136,29 +137,15 @@
             </div>
             <div class="activity-element col-md-4">
                 <h2>Woodshop</h2>
-                - Tons of Hand Tools
-                - Tons of Power Tools
-                - Bandsaws
-                - Chopsaw
-                - Routers
-                - Scrollsaw
-                - Wood lathe
-                - Belt sander
-                - Wood scrap shelves
+                - Tons of Hand Tools - Tons of Power Tools - Bandsaws - Chopsaw - Routers - Scrollsaw - Wood lathe - Belt sander - Wood scrap
+                shelves
             </div>
             <div class="activity-element col-md-4">
                 <h2>Metalshop</h2>
                 <img src="images/welding.gif">
                 <li>Large mill</li>
-                - Metal lathes
-                - Welding station
-                - Mig Welder
-                - Small foundry
-                - Two forges
-                - Anvils
-                - Many Grinders
-                - Small kiln
-                - Metal scrap shelves
+                - Metal lathes - Welding station - Mig Welder - Small foundry - Two forges - Anvils - Many Grinders - Small kiln - Metal
+                scrap shelves
             </div>
             <div class="activity-element col-md-4">
                 <h2>CNC mill</h2>
@@ -174,55 +161,37 @@
             </div>
             <div class="activity-element col-md-4">
                 <h2>Audio Video</h2>
-                - Green screen room and backdrops
-                - Professional lighting rigs
-                - Audio/Video recording equipment
+                - Green screen room and backdrops - Professional lighting rigs - Audio/Video recording equipment
             </div>
             <div class="activity-element col-md-4">
                 <h2>Diy Bio lab</h2>
-                <img src="images/bio_lab.jpg"/>
+                <img src="images/bio_lab.jpg" />
                 <li>Glassware</li>
-                - Lab bench
-                - Thermocyclers
-                - Incubators
-                - Microscopes
-                - Centrifuge
-                - Rotovap
+                - Lab bench - Thermocyclers - Incubators - Microscopes - Centrifuge - Rotovap
             </div>
             <div class="activity-element col-md-4">
                 <h2>Art Loft</h2>
-                - Sewing machines
-                - Embroidery machine
-                - Painting supplies
-                - Tiedye
-                - Paintbooth
+                - Sewing machines - Embroidery machine - Painting supplies - Tiedye - Paintbooth
             </div>
             <div class="activity-element col-md-4">
                 <h2>Autobay</h2>
-                - Jacks
-                - Full set of auto tools
+                - Jacks - Full set of auto tools
             </div>
             <div class="activity-element col-md-4">
                 <h2>Work areas</h2>
-                <img src="images/members.jpg"/>
+                <img src="images/members.jpg" />
                 <li>Large tables in main area</li>
                 <li>Large tables in shop</li>
             </div>
             <div class="activity-element col-md-4">
                 <h2>Stage</h2>
-                - Large projector and stage
-                - Comfortable area for stage seating
+                - Large projector and stage - Comfortable area for stage seating
             </div>
             <div class="activity-element col-md-4">
                 <h2>Fun</h2>
-                <img src="images/colonial_marines.jpg"/>
+                <img src="images/colonial_marines.jpg" />
                 <li>Kitchen</li>
-                - Pinball machine
-                - Shinobi arcade cabinet
-                - Pink Pterodactyl
-                - Meme Bathroom
-                - Member Brick art wall
-                - Cool art
+                - Pinball machine - Shinobi arcade cabinet - Pink Pterodactyl - Meme Bathroom - Member Brick art wall - Cool art
             </div>
 
 
@@ -371,8 +340,7 @@
         </section>
 
         <section class="row">
-            <div class=" fill-screen fixed-attachment  wow slideInRight "
-                 style="background-image: url(images/pinky.jpg)">
+            <div class=" fill-screen fixed-attachment  wow slideInRight " style="background-image: url(images/pinky.jpg)">
             </div>
         </section>
 
@@ -403,4 +371,5 @@
     <script src="scrolling.js"></script>
 
 </body>
+
 </html>
