corrected teh form1 bed size

--- a/index.html
+++ b/index.html
@@ -115,8 +115,8 @@
                 <h2>3D printing</h2>
                 <img src="images/lulzbot.jpg" />
                 <li>Lulzbot mini - Fdm 6x6 bed .2mm layer height</li>
-                <li>Taz - Fdm 4.9 x 4.9 x 6.5 inches bed .4mm layer height</li>
-                <li>From 1+ resin ?x? bed .05mm layer height</li>
+                <li>Taz - Fdm ?x? bed .4mm layer height</li>
+                <li>From 1+ resin 4.9 x 4.9 x 6.5 inches bed .05mm layer height</li>
                 <li>Autodesk inventor</li>
 
             </div>
