--- a/index.html
+++ b/index.html
@@ -1,5 +1,11 @@
 ﻿<!DOCTYPE html>
 <html>
+<script>
+    $(function () {
+        $("#header").load("header.html");
+        $("#footer").load("footer.html");
+    });
+</script>
 
 <head>
     <title>Freeside Atlanta</title>
@@ -15,40 +21,8 @@
 </head>
 
 <body>
-    <header id="top">
-        <nav class="navbar navbar-inverse navbar-fixed-top cbp-af-header" role="navigation">
-            <div class="container-fluid">
-                <!-- Brand and toggle get grouped for better mobile display -->
-                <div class="navbar-header">
-                    <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
-                        <span class="sr-only">Toggle navigation</span>
-                        <span class="icon-bar"></span>
-                        <span class="icon-bar"></span>
-                        <span class="icon-bar"></span>
-                    </button>
-                    <a href="#top">
-                        <img src="images/freesideofficialnavlogo.png" />
-                    </a>
-                </div>
 
-                <!-- Collect the nav links, forms, and other content for toggling -->
-                <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-                    <ul class="nav navbar-nav navbar-right">
-                        <li><a href="#top">Home</a></li>
-                        <li><a href="#mission">About</a></li>
-                        <li><a href="#the-space">The Space</a></li>
-                        <li><a href="#events">Events</a></li>
-                        <li><a href="#partnerships">Partnerships</a></li>
-                        <li><a href="#getting-to-freeside">Getting To Freeside</a></li>
-                        <li><a href="#contact-us">Contact Us</a></li>
-                    </ul>
-                </div>
-                <!-- /.navbar-collapse -->
-            </div>
-            <!-- /.container-fluid -->
-        </nav>
-
-    </header>
+    <div id="header"></div>
 
     <div class="container-fluid">
 
