--- a/membership.html
+++ b/membership.html
@@ -1,5 +1,20 @@
 <!DOCTYPE html>
 <html>
+
+<head>
+    <title>Freeside Atlanta</title>
+    <link rel="shortcut icon" type="image/x-icon" href="images/favicon.ico" />
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
+    <link href='http://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
+    <link href="Content/font-awesome.min.css" rel="stylesheet" />
+    <link href="Content/bootstrap.min.css" rel="stylesheet" />
+    <link rel="stylesheet" href="Content/animate.css">
+    <link href="app.css" rel="stylesheet" />
+    <link rel="stylesheet/less" type="text/css" href="background.less" />
+
+</head>
+
+
 <script>
     $(function () {
         $("#header").load("header.html");
