--- a/membership.html
+++ b/membership.html
@@ -1,11 +1,5 @@
-<!DOCTYPE html>
 <html>
-<script>
-    $(function () {
-        $("#header").load("header.html");
-        $("#footer").load("footer.html");
-    });
-</script>
+
 
 <head>
     <title>Freeside Atlanta</title>
@@ -17,11 +11,19 @@
     <link rel="stylesheet" href="Content/animate.css">
     <link href="app.css" rel="stylesheet" />
     <link rel="stylesheet/less" type="text/css" href="background.less" />
-
+    <script src="//code.jquery.com/jquery-1.10.2.js"></script>
+    <script>
+        $(function () {
+            $("#header").load("header.html");
+            $("#footer").load("footer.html");
+        });
+    </script>
 </head>
 
 <body>
     <div id="header"></div>
+    <!--Remaining section-->
+    <div id="footer"></div>
 </body>
 
 </html>
