adds the newest jquery

--- a/membership.html
+++ b/membership.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="Content/animate.css">
     <link href="app.css" rel="stylesheet" />
     <link rel="stylesheet/less" type="text/css" href="background.less" />
-    <script src="//code.jquery.com/jquery-1.10.2.js"></script>
+    <script src="//code.jquery.com/jquery-3.2.1.min.js"></script>
     <script>
         $(function () {
             $("#header").load("header.html");
