--- a/index.html
+++ b/index.html
@@ -17,6 +17,13 @@
     <link rel="stylesheet" href="Content/animate.css">
     <link href="app.css" rel="stylesheet" />
     <link rel="stylesheet/less" type="text/css" href="background.less" />
+    <script src="//code.jquery.com/jquery-3.2.1.min.js"></script>
+    <script>
+        $(function () {
+            $("#header").load("header.html");
+            $("#footer").load("footer.html");
+        });
+    </script>
 
 </head>
 
