--- a/header.html
+++ b/header.html
@@ -18,7 +18,7 @@
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav navbar-right">
                     <li><a href="index.html#top">Home</a></li>
-                    <li><a href="membership.html">Membership</a></li>
+                    <li><a href="membership.html#top">Membership</a></li>
                     <li><a href="#mission">About</a></li>
                     <li><a href="#the-space">The Space</a></li>
                     <li><a href="#events">Events</a></li>
