--- a/header.html
+++ b/header.html
@@ -19,12 +19,12 @@
                 <ul class="nav navbar-nav navbar-right">
                     <li><a href="index.html#top">Home</a></li>
                     <li><a href="membership.html#top">Membership</a></li>
-                    <li><a href="#mission">About</a></li>
-                    <li><a href="#the-space">The Space</a></li>
-                    <li><a href="#events">Events</a></li>
-                    <li><a href="#partnerships">Partnerships</a></li>
-                    <li><a href="#getting-to-freeside">Getting To Freeside</a></li>
-                    <li><a href="#contact-us">Contact Us</a></li>
+                    <li><a href="index.html#mission">About</a></li>
+                    <li><a href="index.html#the-space">The Space</a></li>
+                    <li><a href="index.html#events">Events</a></li>
+                    <li><a href="index.html#partnerships">Partnerships</a></li>
+                    <li><a href="index.html#getting-to-freeside">Getting To Freeside</a></li>
+                    <li><a href="index.html#contact-us">Contact Us</a></li>
                 </ul>
             </div>
             <!-- /.navbar-collapse -->
