--- a/header.html
+++ b/header.html
@@ -22,7 +22,7 @@
                     <li><a href="index.html#mission">About</a></li>
                     <li><a href="index.html#the-space">The Space</a></li>
                     <li><a href="index.html#events">Events</a></li>
-                    <li><a href="index.html#partnerships">Partnerships</a></li>
+                    <li><a href="partnerships.html#partnerships">Partnerships</a></li>
                     <li><a href="index.html#getting-to-freeside">Getting To Freeside</a></li>
                     <li><a href="index.html#contact-us">Contact Us</a></li>
                 </ul>
